<resources>
    <string name="app_name">CPEN 391 User App</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- login/signup -->
    <string name="Login">Log In</string>
    <string name="Register">Register</string>
    <string name="Create_an_Account">Create an Account</string>
    <string name="Email_Address">Email Address</string>
    <string name="Last_Name">Last Name</string>
    <string name="First_Name">First Name</string>

    <!-- car pages -->
    <string name="no_cars_registered">No Cars Registered Yet!</string>
    <string name="payment_reminder">Remember to Register your Payment Information First.</string>
    <string name="Register_a_New_Car">Register a New Car!</string>
    <string name="Registered_cars">Registered Cars</string>
    <string name="Add_New_Plate">Add New Plate</string>
    <string name="Plate_Number">Plate Number</string>
    <string name="plate_example">ABC123</string>
    <string name="Car_Name">Car Name</string>
    <string name="carName_example">Honda Blue</string>
    <string name="add">Add</string>
    <string name="Edit_Plate_Info">Edit Plate Info</string>
    <string name="Save_Changes">Save Changes</string>
    <string name="Remove_car">Remove Car</string>
    <string name="Edit">Edit</string>
    <string name="Meter_No">Meter No</string>

    <!-- account pages -->
    <string name="Account">Account</string>
    <string name="Full_Name">Full Name</string>
    <string name="email_example">email@gmail.com</string>
    <string name="Profile">Profile</string>
    <string name="Personal_Info">Personal Info</string>
    <string name="Payment_Method">Payment Method</string>
    <string name="Notification">Notification</string>
    <string name="Logout">Logout</string>
    <string name="Country">Country</string>
    <string name="Country_example">Canada</string>
    <string name="CVV">CVV</string>
    <string name="CVV_example">123</string>
    <string name="Exp_Date">Exp. Date</string>
    <string name="Exp_example">MM/YY</string>
    <string name="Card_Number">Card Number</string>
    <string name="Edit_Payment_Info">Edit Payment Info</string>
    <string name="Edit_Personal_Info">Edit Personal Info</string>
    <string name="Admin">Admin</string>
    <string name="View_Meter_Status">View Meter Status</string>

    <!-- history pages -->
    <string name="No_Parking_History_Yet">No Parking History Yet!</string>
    <string name="Parking_History">Parking History</string>
    <string name="Receipt">Receipt</string>
    <string name="Date">Date</string>
    <string name="Date_example">2021-03-04</string>
    <string name="Parked_At">Parked At</string>
    <string name="Parked_At_example">01:00:00</string>
    <string name="Duration">Duration</string>
    <string name="Duration_example">00:56</string>
    <string name="Meter_Number">Meter Number</string>
    <string name="Meter_Number_example">000001</string>
    <string name="Cost">Cost</string>
    <string name="cost_example">3.11</string>

    <!-- home page -->
    <string name="welcome_back">Welcome Back,</string>
    <string name="Currently_Parked_Cars">Currently Parked Cars:</string>
    <string name="No_Currently_Parked_Cars">No Currently Parked Cars!</string>

    <!-- Admin page -->
    <string name="Occupied">Occupied</string>
    <string name="Empty">Empty</string>
    <string name="Last_Updated">Updated:</string>
    <string name="time_example">2021-02-25 02:18:00</string>
    <string name="Unit_price">Unit Price (Hourly): $</string>
    <string name="No_Meters">No Registered Meters Yet!</string>
    <string name="Meter_Status">Meter Status</string>
    <string name="Reset">Reset</string>

</resources>