<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header"
        android:elevation="5dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="8dp"
            android:background="@null"
            android:foreground="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
            android:tint="@color/headerText" />

        <TextView
            android:id="@+id/Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:fontFamily="@font/aldrich"
            android:text="@string/Receipt"
            android:textColor="@color/headerText"
            android:textSize="25dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="441dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/Plate_Number"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/plateNo"
            android:layout_width="408dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/plate_example"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="0.5"
            android:inputType="textPersonName"
            android:text="@string/Date"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/date"
            android:layout_width="12dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/Date_example"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="0.5"
            android:inputType="textPersonName"
            android:text="@string/Parked_At"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/startTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/Parked_At_example"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="0.5"
            android:inputType="textPersonName"
            android:text="@string/Duration"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/Duration_example"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="0.5"
            android:inputType="textPersonName"
            android:text="@string/Meter_Number"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/meterNo"
            android:layout_width="12dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/Meter_Number_example"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="0.5"
            android:inputType="textPersonName"
            android:text="@string/Cost"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="13dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:inputType="textPersonName"
            android:text="$"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/cost"
            android:layout_width="19dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/cost_example"
            android:textSize="20dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />


</LinearLayout>