<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header"
        android:elevation="5dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="8dp"
            android:background="@null"
            android:tint="@color/headerText"
            android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
            android:foreground="?android:attr/selectableItemBackground"/>

        <TextView
            android:id="@+id/Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:fontFamily="@font/aldrich"
            android:textColor="@color/headerText"
            android:text="@string/Edit_Plate_Info"
            android:textSize="25dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp">


        <TextView
            android:id="@+id/textView"
            android:layout_width="16dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="0.5"
            android:text="@string/Plate_Number" />

        <TextView
            android:id="@+id/plateNo"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"

            android:text="@string/plate_example"
            android:textSize="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_margin="8dp">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="13dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="0.5"
            android:text="@string/Car_Name" />

        <EditText
            android:id="@+id/carNickName"
            android:layout_width="26dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:hint="@string/carName_example"
            android:inputType="text" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/saveChanges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="0"
            android:fontFamily="@font/aldrich"
            android:text="@string/Save_Changes"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="0"
            android:fontFamily="@font/aldrich"
            android:text="@string/Remove_car"
            android:backgroundTintMode="src_over"
            android:backgroundTint="@color/red"
            android:drawableLeft="@drawable/ic_baseline_delete_forever_24"
            android:drawableTint="@color/white"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>


</LinearLayout>