<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:backgroundTint="@color/white"
        android:elevation="8dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="0"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/bracket1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:inputType="textPersonName"
                    android:text="["
                    android:textSize="30dp" />

                <TextView
                    android:id="@+id/plateNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:inputType="textPersonName"
                    android:text="@string/plate_example"
                    android:textSize="30dp" />

                <TextView
                    android:id="@+id/bracket2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:inputType="text"
                    android:text="]"
                    android:textSize="30dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="0"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/carNickName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:inputType="textPersonName|time"
                    android:text="@string/carName_example"
                    android:textSize="20dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="0"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text5"
                    android:layout_width="95dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:inputType="textPersonName|time"
                    android:text="@string/Meter_No" />

                <TextView
                    android:id="@+id/meterNo"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:inputType="textPersonName|time"
                    android:text="@string/Meter_Number_example" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="0"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Text1"
                    android:layout_width="95dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:inputType="textPersonName"
                    android:text="@string/Parked_At" />

                <TextView
                    android:id="@+id/startTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:inputType="time"
                    android:text="@string/Parked_At_example" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="0"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Text2"
                    android:layout_width="95dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:inputType="textPersonName"
                    android:text="@string/Duration" />

                <TextView
                    android:id="@+id/duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:inputType="time"
                    android:text="@string/Duration_example" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="0"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Text3"
                    android:layout_width="63dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_gravity="center_vertical"
                    android:inputType="textPersonName"
                    android:text="@string/Cost"
                    android:textSize="23dp" />

                <TextView
                    android:id="@+id/Text4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:inputType="text"
                    android:text="$"
                    android:textSize="23dp" />

                <TextView
                    android:id="@+id/cost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:inputType="time"
                    android:text="@string/cost_example"
                    android:textSize="23dp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>